# qe_agent_v2

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  TODO.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: test.yml
docs/: README.md  index.md
docs/api_reference/: data_models.md  index.md  repository.md  test_execution.md  test_generation.md  ui.md
docs/developer_guide/: architecture.md  code_structure.md  contributing.md  development_setup.md  extending.md  index.md
docs/getting_started/: configuration.md  examples.md  index.md
docs/user_guide/: coverage_analysis.md  index.md  llm_providers.md  repository_analysis.md  test_detection.md  test_generation.md  test_validation.md
src/: MIGRATION.md  pyproject.toml.example  run.py  run.py.example
src/test_coverage_agent/: main.py
src/test_coverage_agent/repository/: __init__.py  coverage_analyzer.py  scanner.py  test_detector.py
src/test_coverage_agent/test_execution/: coverage_reporter.py  test_runner.py  test_validator.py
src/test_coverage_agent/ui/: cli.py  web.py  (+2 more)
test_execution/: __init__.py  test_validator.py
test_generation/: code_understanding.py  template_manager.py  test_writer.py
tests/: test_cli.py  test_code_understanding.py  test_coverage_analyzer.py  test_coverage_reporter.py  test_llm_provider.py  test_main.py  test_real_cli.py  test_repository_scanner.py  test_template_manager.py  test_test_detector.py  test_test_runner.py  test_test_validator.py  test_test_writer.py  test_web.py
ui/: cli.py  cli_for_testing.py  web.py  web_for_testing.py
(+3 files in other folders)
